oc/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: flask
  namespace: default
spec:
  host: flask-default.apps-crc.testing
  to:
    kind: Service
    name: flask
    weight: 100
  port:
    targetPort: 5000
  wildcardPolicy: None
